update bp config

--- a/flon.chain/node-run/mainnet/conf.bp.env
+++ b/flon.chain/node-run/mainnet/conf.bp.env
@@ -4,4 +4,4 @@ p2p_peer_addresses=()
 #如果启动BP节点，需要设置为true
 bp_plugin=true
 producer_names=("flon")
-signature_providers=("FU6JCHZ1boJBxjAwmUykCLFe9ipsR44GNTL2w4zgudwjVtHvbgTT=KEY:xxxx")
+signature_providers=("FUxxx=KEY:xxxx")
