--- a/flon.env
+++ b/flon.env
@@ -1,16 +1,13 @@
-# 版本和网络配置
 FULLON_VERSION=0.3.6-alpha
 CDT_VERSION=0.3.2-alpha
 HISTORY_VERSION=0.3.2-alpha
-NET=devnet
+NET=mainnet
 NODE_HOST=hk-t1.vmi.nestar.vip
 
-# GitHub 配置
-GITHUB_USERNAME=fullonlabs
+GITHUB_USERNAME=fullon-labs
 GITHUB_USERNAME_LOWER=$(echo "$GITHUB_USERNAME" | tr '[:upper:]' '[:lower:]')
 NODE_IMG_HEADER=ghcr.io/${GITHUB_USERNAME_LOWER}/
 
-#OSS配置
 ALI_OSS_ENDPOINT=
 ALI_OSS_ACCESS_KEY=
 ALI_OSS_ACCESS_SECRET=
