--- a/flon.env
+++ b/flon.env
@@ -1,6 +1,6 @@
-FULLON_VERSION=0.3.6-alpha
-CDT_VERSION=0.3.2-alpha
-HISTORY_VERSION=0.3.2-alpha
+FULLON_VERSION=0.5.0
+CDT_VERSION=0.5.0
+HISTORY_VERSION=0.5.0
 NET=mainnet
 NODE_HOST=hk-t1.vmi.nestar.vip
 
