--- a/flon.chain/node-run/conf.main.env
+++ b/flon.chain/node-run/conf.main.env
@@ -4,7 +4,7 @@ container_id=01
 node_name=funod_bp_mainnet
 agent_name=$(hostname)
 p2p_server_address=$(hostname).vm.nestar.vip
-p2p_peer_addresses=("hk-t1.vm.nestar.vip:19606")
+p2p_peer_addresses=("hk-m1.vm.nestar.vip:9806")
 
 # 本地节点的P2P端口，RPC端口，HISTORY WS端口,testnet + 10000, devnet + 20000
 P2P_PORT=9806       
