remove unsed code

--- a/flon.chain/node-run/conf.main.env
+++ b/flon.chain/node-run/conf.main.env
@@ -1,6 +1,5 @@
 NODE_HOME=/mnt/data1
 
-container_id=01
 node_name=funod_bp_mainnet
 agent_name=$(hostname)
 p2p_server_address=$(hostname).vm.nestar.vip
@@ -15,9 +14,10 @@ trace_plugin=false
 state_plugin=false
 history_plugin=false
 
-#如果启动BP节点，需要设置为true,还需要设置BP的私钥 ./node/conf/plugin_bp.ini
+# If you want to start a BP (block producer) node, set this to true.
+# You must also configure the BP private key in ./node/conf/plugin_bp.ini
 bp_plugin=true
 #bp_conf_path=./$NET/conf.bp.env
-bp_conf_path=~/conf.bp.env  # 默认使用当前目录下的conf.bp.env
+bp_conf_path=~/conf.bp.env # Default: use conf.bp.env from the current directory if not specified
 producer_names=()
 signature_providers=()
