update code sytle

--- a/flon.chain/node-run/conf.main.env
+++ b/flon.chain/node-run/conf.main.env
@@ -5,7 +5,8 @@ agent_name=$(hostname)
 p2p_server_address=$(hostname).vm.nestar.vip
 p2p_peer_addresses=("hk-m1.vm.nestar.vip:9806")
 
-# 本地节点的P2P端口，RPC端口，HISTORY WS端口,testnet + 10000, devnet + 20000
+# Local node ports: P2P port, RPC port, and HISTORY WebSocket port.
+# For testnet, add 10000; for devnet, add 20000.
 P2P_PORT=9806       
 RPC_PORT=8888
 HIST_WS_PORT=9555
