--- a/flon.scan/chain_monitor/monitors.conf
+++ b/flon.scan/chain_monitor/monitors.conf
@@ -1,2 +1,6 @@
-# 格式：ALERT_NAME,HEAD_KEY,DB_TABLE,RESTART_CONTAINER
-true_dex_spot,true_dex_head,chain.fill_status,amcsync2pg-spot-dex
+
+#ALERT_NAME                    HEAD_KEY                TABLE_NAME        CONTAINER_NAME          PG_DB
+sg-arm:flonscan_xchain_mainnet,flonscan_xchain_mainnet,chain.fill_status,flonscan_xchain_mainnet,flonxchaindb
+
+hk-ms1:flonscan_explore_mainnet,flonscan,chain.fill_status,flonscan_explore_mainnet,flonscan
+hk-ms1:flonscan_biz_mainnet,flonscanbiz,chain.fill_status,flonscan_biz_mainnet,flonscanbiz
