--- a/flon.env
+++ b/flon.env
@@ -4,6 +4,9 @@ HISTORY_VERSION=0.5.0
 NET=mainnet
 NODE_HOST=hk-t1.vmi.nestar.vip
 
+NODE_HOME=/mnt/data1
+BRANCH=develop
+
 GITHUB_USERNAME=fullon-labs
 GITHUB_USERNAME_LOWER=$(echo "$GITHUB_USERNAME" | tr '[:upper:]' '[:lower:]')
 NODE_IMG_HEADER=ghcr.io/${GITHUB_USERNAME_LOWER}/
