--- a/flon.env
+++ b/flon.env
@@ -6,6 +6,8 @@ NODE_HOST=hk-t1.vmi.nestar.vip
 
 NODE_HOME=/mnt/data1
 BRANCH=develop
+FULLON_BRANCH=develop
+CDT_BRANCH=develop
 
 GITHUB_USERNAME=fullon-labs
 GITHUB_USERNAME_LOWER=$(echo "$GITHUB_USERNAME" | tr '[:upper:]' '[:lower:]')
