update flon node k8s config

--- a/chain-k8s/flon-chart/values.yaml
+++ b/chain-k8s/flon-chart/values.yaml
@@ -16,7 +16,7 @@ ingress:
   className: "nginx"
   annotations: {}
   hosts:
-    - host: flon-rpc.yourdomain.com
+    - host: t.fufi.dev
       paths:
         - path: /
           pathType: Prefix
@@ -26,7 +26,7 @@ persistence:
   enabled: true
   storageClassName: fast-ssd
   accessModes: ["ReadWriteOnce"]
-  size: 300Gi
+  size: 100Gi
 
 resources:
   requests:
@@ -58,6 +58,7 @@ chain:
 
 # peers 列表（p2p-peer-address）
 peers: []
+   - hk-t1.vm.nestar.vip:19806
 #  - peer1.flon.example.com:9876
 #  - peer2.flon.example.com:9876
 
@@ -66,26 +67,26 @@ genesis:
   enabled: true
   content: |
     {
-      "initial_timestamp": "2018-06-08T08:08:08.888",
-      "initial_key": "EOS6MRy..ReplaceThis..",
+      "initial_timestamp": "2025-01-01T08:00:00.000",
+      "initial_key": "FU6JCHZ1boJBxjAwmUykCLFe9ipsR44GNTL2w4zgudwjVtHvbgTT",
       "initial_configuration": {
         "max_block_net_usage": 1048576,
-        "target_block_net_usage_pct": 1000,
         "max_transaction_net_usage": 524288,
         "base_per_transaction_net_usage": 12,
         "net_usage_leeway": 500,
         "context_free_discount_net_usage_num": 20,
         "context_free_discount_net_usage_den": 100,
         "max_block_cpu_usage": 200000,
-        "target_block_cpu_usage_pct": 1000,
         "max_transaction_cpu_usage": 150000,
         "min_transaction_cpu_usage": 100,
         "max_transaction_lifetime": 3600,
-        "deferred_trx_expiration_window": 600,
-        "max_transaction_delay": 3888000,
-        "max_inline_action_size": 4096,
+        "max_inline_action_size": 524288,
         "max_inline_action_depth": 4,
-        "max_authority_depth": 6
+        "max_authority_depth": 6,
+        "max_total_ram_usage": 68719476736,
+        "gas_per_cpu_ms": 10000,
+        "gas_per_net_kb": 50000,
+        "gas_per_ram_kb": 50000
       }
     }
 
@@ -93,12 +94,12 @@ genesis:
 snapshot:
   enabled: false
   # 支持 .bin 或 .zst
-  url: "https://your-bucket/snapshots/flon-snap-<height>.bin.zst"
+  url: "https://flon-test.oss-cn-hongkong.aliyuncs.com/snapshots/snapshot-0112e5a55036637fa05a3ccf3dde370816b216092d87b9b2626f9f0cc0e77e17.bin"
 
 producer:
   enabled: false
   name: yourbpname
-  signatureProvider: "EOSxxxx=KEOSD:PW5Kxxxxx"
+  signatureProvider: "FUxxxx=KEOSD:PW5Kxxxxx"
 
 # 探针
 readinessProbe:
