--- a/chain-k8s/flon-chart/Chart.yaml
+++ b/chain-k8s/flon-chart/Chart.yaml
@@ -5,7 +5,7 @@ kubeVersion: ">=1.22.0-0"
 description: Deploy FLON (nodflon) as a StatefulSet on Kubernetes
 home: https://flonscan.io
 maintainers:
-  - name: your-name
-    email: you@example.com
+  - name: flonian
+    email: flonian@example.com
 type: application
 appVersion: "v2.1.0"
