--- a/chain-k8s/flon-chart/templates/statefulset.yaml
+++ b/chain-k8s/flon-chart/templates/statefulset.yaml
@@ -42,7 +42,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
-            - nodflon
+            - funod
             - --data-dir=/data
             - --config-dir=/config
             {{- if .Values.genesis.enabled }}
@@ -147,10 +147,15 @@ spec:
             name: {{ include "flon-node.fullname" . }}-config
         - name: config
           emptyDir: {}
+        {{- if not .Values.persistence.enabled }}
+        - name: data
+          emptyDir: {}
+        {{- end }}
         {{- with .Values.extraVolumes }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
 
+  {{- if .Values.persistence.enabled }}
   volumeClaimTemplates:
     - metadata:
         name: data
@@ -160,3 +165,4 @@ spec:
         resources:
           requests:
             storage: {{ .Values.persistence.size }}
+  {{- end }}
