--- a/chain-k8s/flon-chart/templates/configmap.yaml
+++ b/chain-k8s/flon-chart/templates/configmap.yaml
@@ -10,7 +10,6 @@ data:
     blocks-dir = /data/blocks
     contracts-console = true
     chain-state-db-size-mb = {{ .Values.chain.chainStateDbSizeMB }}
-    reversible-blocks-db-size-mb = {{ .Values.chain.reversibleDbSizeMB }}
     http-server-address = 0.0.0.0:{{ .Values.service.httpPort }}
     p2p-listen-endpoint = 0.0.0.0:{{ .Values.service.p2pPort }}
     p2p-max-nodes-per-host = {{ .Values.chain.p2pMaxNodesPerHost }}
@@ -21,16 +20,15 @@ data:
     sync-fetch-span = {{ .Values.chain.syncFetchSpan }}
     read-mode = {{ .Values.chain.readMode }}
     max-transaction-time = {{ .Values.chain.maxTransactionTime }}
-    reversible-blocks-db-guard-size-mb = 128
     chain-threads = {{ .Values.chain.chainThreads }}
     http-threads = {{ .Values.chain.httpThreads }}
-    plugin = flonio::chain_plugin
-    plugin = flonio::chain_api_plugin
-    plugin = flonio::net_plugin
-    plugin = flonio::net_api_plugin
-    plugin = flonio::producer_api_plugin
+    plugin = eosio::chain_plugin
+    plugin = eosio::chain_api_plugin
+    plugin = eosio::net_plugin
+    plugin = eosio::net_api_plugin
+    plugin = eosio::producer_api_plugin
     {{- if .Values.producer.enabled }}
-    plugin = flonio::producer_plugin
+    plugin = eosio::producer_plugin
     producer-name = {{ .Values.producer.name | quote }}
     signature-provider = {{ .Values.producer.signatureProvider | quote }}
     {{- end }}
