--- a/.flon.env
+++ b/.flon.env
@@ -3,6 +3,7 @@ CDT_VERSION=0.6.1
 HISTORY_VERSION=0.5.0
 NET=mainnet
 NODE_HOST=hk-t1.vmi.nestar.vip
+LOCAL_PATH=/Users/ray/work/flon/flon-core
 
 NODE_HOME=/mnt/data1
 BRANCH=main
