--- a/flon.chain/node-build/Dockerfile.runtime.base
+++ b/flon.chain/node-build/Dockerfile.runtime.base
@@ -9,5 +9,6 @@ RUN echo "deb http://mirrors.aliyun.com/ubuntu/ jammy main restricted universe m
     apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
         libusb-1.0-0 \
+        librocksdb-dev \
         libcurl3-gnutls && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
